--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ packaging==23.2
 pandas==2.1.4
 paypalrestsdk==1.13.3
 pillow==10.2.0
+psycopg2-binary==2.9.9
 pycparser==2.21
 pyOpenSSL==23.3.0
 python-dateutil==2.8.2
